DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
[1.0.1 released - 8.29.2005]===================================================
2005-08-29 patrickh NEW VERSION: 1.0.1
2005-07-28 patrickh Implemented vpr::SystemBase::getCallStack() for debug
                    builds on Windows.

[1.0.0 released - 7.5.2005]====================================================
2005-07-05 patrickh NEW VERSION: 1.0.0
2005-06-15 patrickh Updated to support Windows 64-bit edition.
                    The preprocessor symbol VPR_OS_Windows is now used to
                    identify the Windows operating system.  VPR_OS_Win32 is
                    used to identify Win32; VPR_OS_Win64 identifies Win64.
                    NEW VERSION: 0.93.1

[1.0 Beta 3 released - 6.7.2005]===============================================
2005-06-06 patrickh NEW VERSION: 0.93.0
2005-05-18 patrickh Fixed header file pollution on Windows resulting from
                    winsock2.h being included by vpr/md/NSPR/SystemNSPR.h.
                    NEW VERSION: 0.92.4
2005-05-10 patrickh Renamed functions in vpr::LibraryLoader to use more logical
                    names.  The old function names have been retained for
                    backwards compatibility.
                    NEW VERSION: 0.92.3
2005-05-04 patrickh Updated to support Mac OS X 10.4 (Darwin 8.0).
                    NEW VERSION: 0.92.2
2005-04-21 patrickh Renamed vpr::ThreadPool::barrier() to
                    vpr::ThreadPool::wait() to fix compile errors on Gentoo
                    Linux.
                    NEW VERSION: 0.92.1

[1.0 Beta 2 released - 1.18.2005]==============================================
2005-01-18 patrickh NEW VERSION: 0.92.0
2004-12-28 allenb   Fixed bug in POSIX implementation of CondVar.  There was
                    a bug that allowed out of range values to be passed
                    to the posix wait methods.