@@ -51,6 +51,9 @@
 namespace vpr
 {
 
+vpr::ReturnStatus getIfAddrs(std::vector<vpr::InetAddrNSPR>& hostAddrs,
+                             const bool withLoopback);
+
 const InetAddrNSPR InetAddrNSPR::AnyAddr;      // Default constructor defaults to ANY addr
 
 vpr::ReturnStatus InetAddrNSPR::getLocalHost(vpr::InetAddrNSPR& hostAddr)
@@ -66,6 +69,13 @@ vpr::ReturnStatus InetAddrNSPR::getLocalHost(vpr::InetAddrNSPR& hostAddr)
    }
 
    return status;
+}
+
+vpr::ReturnStatus
+InetAddrNSPR::getAllLocalAddrs(std::vector<vpr::InetAddrNSPR>& hostAddrs,
+                               const bool withLoopback)
+{
+   return vpr::getIfAddrs(hostAddrs, withLoopback);
 }
 
 // Set the address for this object using the given address.  It must be of the
