@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2005-12-16 patrickh Added vpr::InetAddr::getAllLocalAddrs().
+
 [1.0.1 released - 8.29.2005]===================================================
 2005-08-29 patrickh NEW VERSION: 1.0.1
 2005-07-28 patrickh Implemented vpr::SystemBase::getCallStack() for debug
